<resources>
    <string name="app_name">BHX</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_application_id" translatable="false">1032330604427694</string>
    <!-- Facebook Application ID, prefixed by 'fb'. Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb1032330604427694</string>
    <string name="app_version">ver 0.102 dev (UI build)</string>
    <!-- account info string -->
    <string name="full_name_label">Họ và Tên</string>
    <string name="default_full_name">Khách</string>
    <string name="account_view_description">Trang tài khoản</string>
    <string name="avatar_description">Avatar</string>
    <string name="authority_label">Quyền:</string>
    <string name="default_authority">GUEST</string>
    <string name="phone_label">Số Điện Thoại</string>
    <string name="default_phone_num">000&#8211;000&#8211;0000</string>
    <string name="email_label">Email:</string>
    <string name="default_email">guest@bhx.com</string>
    <string name="order_btn">Đơn hàng</string>
    <string name="acc_info_btn">Thông tin tài khoản</string>
    <string name="version_label">Phiên bản ứng dụng</string>
    <string name="sales_btn">Khuyến mãi</string>
    <string name="setting_btn">Cài đặt hệ thống</string>
    <string name="customer_support_btn">Hỗ trợ khách hàng</string>
    <string name="term_of_services_btn">Điểu khoản dịch vụ</string>
    <string name="gender_label">Giới Tính</string>
    <string name="male_gender">Nam</string>
    <string name="female_gender">Nữ</string>
    <string name="other_gender">Khác</string>
    <string name="back_btn_description">Quay lại</string>
    <string name="address_label">Địa Chỉ</string>
    <string name="address_province_description">Tỉnh/Thành Phố</string>
    <string name="address_district_description">Quận/Huyện</string>
    <string name="address_ward_description">Ấp/Xã</string>
    <string name="address_description">Số nhà</string>
    <string name="admin_category">Loại sản phẩm</string>
    <string name="admin_promotion">Loại giảm giá</string>
</resources>