<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.AccountFragment.AccountFragment"
    android:contentDescription="@string/account_view_description"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <ImageView
            android:id="@+id/account_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="32dp"
            android:text="@string/default_full_name"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/account_avatar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:text="@string/email_label"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/account_avatar"
            app:layout_constraintTop_toBottomOf="@+id/authority_label" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:text="@string/default_email"
            app:layout_constraintStart_toEndOf="@+id/email_label"
            app:layout_constraintTop_toBottomOf="@+id/authority_label" />

        <TextView
            android:id="@+id/authority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="12dp"
            android:text="@string/default_authority"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/authority_label"
            app:layout_constraintTop_toBottomOf="@+id/full_name" />

        <TextView
            android:id="@+id/authority_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:text="@string/authority_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/account_avatar"
            app:layout_constraintTop_toBottomOf="@+id/full_name" />

        <Button
            android:id="@+id/order_btn"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:bord
            android:backgroundTint="@color/white"
            android:text="@string/order_btn"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_avatar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>